--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
               <a class="header-nav-link" href="./contacts.html/">Contacts</a>
             </li>
           </ul>
-          <address>
-            <ul class="header-add">
-              <li>
-                <a class="header-address" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="header-address" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
         </nav>
+        <address class="header-adress-wrapper">
+          <ul class="header-add">
+            <li>
+              <a class="header-address" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-address" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <!-- #endregion -->
@@ -70,7 +70,7 @@
       <!-- #endregion -->
 
       <!-- #region Main Points -->
-      <section>
+      <section class="main-points">
         <div class="container">
           <h2 class="visually-hidden">
             Our main philosophy consists of well thought out strategy,
@@ -78,28 +78,28 @@
           </h2>
           <ul class="main-points-wrapper">
             <li>
-              <h3 class="section-subheader">Strategy</h3>
+              <h3 class="section-subheader main-points-h3">Strategy</h3>
               <p class="subheader-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li>
-              <h3 class="section-subheader">Punctuality</h3>
+              <h3 class="section-subheader main-points-h3">Punctuality</h3>
               <p class="subheader-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li>
-              <h3 class="section-subheader">Diligence</h3>
+              <h3 class="section-subheader main-points-h3">Diligence</h3>
               <p class="subheader-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li>
-              <h3 class="section-subheader">Technologies</h3>
+              <h3 class="section-subheader main-points-h3">Technologies</h3>
               <p class="subheader-description">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -111,9 +111,9 @@
       <!-- endregion -->
 
       <!-- #region Services -->
-      <section>
-        <div class="container services-wrapper">
-          <h2 class="section-header">What are we doing</h2>
+      <section class="services">
+        <div class="container">
+          <h2 class="section-header services-header">What are we doing</h2>
           <ul class="servicer-pictures-wrapper">
             <li>
               <img
