--- a/portfolio.html
+++ b/portfolio.html
@@ -38,27 +38,27 @@
               <a class="header-nav-link" href="./contacts.html/">Contacts</a>
             </li>
           </ul>
-          <address>
-            <ul class="header-add">
-              <li>
-                <a class="header-address" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="header-address" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
         </nav>
+        <address class="header-adress-wrapper">
+          <ul class="header-add">
+            <li>
+              <a class="header-address" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-address" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <!-- #endregion -->
     <main>
       <!-- #region Buttons  -->
-      <section>
+      <section class="buttons">
         <div class="container">
           <h1 class="visually-hidden">
             Portfolio of great development projects of our studio
@@ -80,10 +80,9 @@
               <button class="portfolio-button" type="button">Marketing</button>
             </li>
           </ul>
-        </section>
+        
         </div>
         <!-- #endregion -->
-        <section>
           <div class="container">
             <ul class="portfolio-cards-wrapper">
               <li class="portfolio-card">
@@ -197,8 +196,8 @@
             </ul>
           </div>
         </section>
-    </main>
-<!-- #region Footer -->
+
+    <!-- #region Footer -->
     <footer class="footer">
       <div class="container">
         <a class="logo logo-light" href="./index.html"
@@ -210,6 +209,6 @@
         </p>
       </div>
     </footer>
-<!-- #endregion -->
+    <!-- #endregion -->
   </body>
 </html>
